# infill_annotation

./: .gitignore  LICENSE  README.md  pyproject.toml
infill_annotation/: manage.py
infill_annotation/annotation/: data_utils.py  urls.py  views.py
infill_annotation/infill_annotation/: asgi.py  settings.py  urls.py  wsgi.py
infill_annotation/static/css/: main.css
infill_annotation/templates/: base.html
infill_annotation/templates/annotation/: annotation.html  radio_buttons.html
