[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infill-annotation"
version = "0.0.1"
description = "A web interface for annotating data"
authors = [
  { name = "John Salvador", email = "jsalvador95@proton.me" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "Django>=5.2",
  "djangorestframework>=3.15",
  "django-environ",
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-django",
  "black",
  "isort",
  "flake8",
  "ipython",
]
